--- a/index.html
+++ b/index.html
@@ -887,9 +887,9 @@
                     <ul style="line-height: 2; font-size: 1.1rem;">
                         <li><strong>Material:</strong> EVA Premium + Rubber Anti-Slip</li>
                         <li><strong>Ketebalan Sol:</strong> 3.5cm (Extra Thick)</li>
-                        <li><strong>Ukuran Tersedia:</strong> 36-40</li>
+                        <li><strong>Ukuran Tersedia:</strong> 35-40</li>
                         <li><strong>Berat:</strong> 250gr per pasang</li>
-                        <li><strong>Warna:</strong> Black, Pink, White, Blue</li>
+                        <li><strong>Warna:</strong> Hitam, Putih</li>
                         <li><strong>Garansi:</strong> 30 hari uang kembali</li>
                     </ul>
                 </div>
